[gd_scene load_steps=39 format=3 uid="uid://det64ltelxgj8"]

[ext_resource type="Script" uid="uid://ddmkmfgjx5crr" path="res://scenes/town/town.gd" id="1_587hs"]
[ext_resource type="Texture2D" uid="uid://wdneset53t7e" path="res://assets/ui/town/TownFull.png" id="2_ki453"]
[ext_resource type="Texture2D" uid="uid://6oa1s5tru2xe" path="res://assets/ui/town/TavernGlow.png" id="3_qvgpt"]
[ext_resource type="Script" uid="uid://b64y2x7228jat" path="res://scenes/town/tavern_click_zone.gd" id="3_uiijs"]
[ext_resource type="Texture2D" uid="uid://coc7iptaf0sum" path="res://assets/ui/town/MarketGlow.png" id="4_25glc"]
[ext_resource type="Script" uid="uid://d24m3t07ee201" path="res://scenes/town/trade_click_zone.gd" id="5_n5615"]
[ext_resource type="Texture2D" uid="uid://c6hl6kulg70yv" path="res://assets/ui/town/ShipyardHover.png" id="7_8mv33"]
[ext_resource type="Script" path="res://scenes/town/shipyard_click_zone.gd" id="7_lersf"]
[ext_resource type="Script" uid="uid://o4mp706v1hhr" path="res://scenes/town/leave_click_zone.gd" id="7_tr5gk"]
[ext_resource type="Texture2D" uid="uid://de3fy8f751bug" path="res://assets/ui/town/LeaveGlow.png" id="10_v3pdc"]
[ext_resource type="Texture2D" uid="uid://d3dv4ydj5uhup" path="res://assets/ui/town/wave/wave2.png" id="12_gdn34"]
[ext_resource type="Texture2D" uid="uid://dfur0vpymbf8p" path="res://assets/ui/town/wave/wave11.png" id="13_8dq74"]
[ext_resource type="Texture2D" uid="uid://pggpmyd483ic" path="res://assets/ui/town/wave/wave12.png" id="14_v6jhq"]
[ext_resource type="Texture2D" uid="uid://bn6onpwarb2tn" path="res://assets/ui/town/wave/wave3.png" id="16_qet4j"]
[ext_resource type="Texture2D" uid="uid://dlkly72uy8ymb" path="res://assets/ui/town/wave/wave4.png" id="17_587hs"]
[ext_resource type="Texture2D" uid="uid://bluu20wmiakje" path="res://assets/ui/town/wave/wave5.png" id="18_prosl"]
[ext_resource type="Texture2D" uid="uid://b1au3lhkt50oy" path="res://assets/ui/town/wave/wave6.png" id="19_8otme"]
[ext_resource type="Texture2D" uid="uid://dski3si1c8fd8" path="res://assets/ui/town/wave/wave7.png" id="20_086wm"]
[ext_resource type="Texture2D" uid="uid://blgvsyijokyai" path="res://assets/ui/town/wave/wave8.png" id="21_lteju"]
[ext_resource type="Texture2D" uid="uid://bgf1afp2sls5g" path="res://assets/ui/town/wave/wave9.png" id="22_hyja2"]
[ext_resource type="Texture2D" uid="uid://bnp7nnc40yoc4" path="res://assets/ui/town/wave/wave10.png" id="23_ipcul"]
[ext_resource type="Texture2D" uid="uid://dqvsss0qc332e" path="res://assets/ui/town/characters/sleepy1.png" id="24_086wm"]
[ext_resource type="Texture2D" uid="uid://cqmnw7c1yyhqj" path="res://assets/ui/town/characters/sleepy2.png" id="25_lteju"]
[ext_resource type="Texture2D" uid="uid://cfkyb0uvtq8sl" path="res://assets/ui/town/characters/sleepy3.png" id="26_hyja2"]
[ext_resource type="Texture2D" uid="uid://5m2vqkgbat3l" path="res://assets/ui/town/characters/sleepy4.png" id="27_ipcul"]
[ext_resource type="Texture2D" uid="uid://srgdu4k1hrg3" path="res://assets/ui/town/characters/spectators1.png" id="28_6k88b"]
[ext_resource type="Texture2D" uid="uid://dti2m150meqr4" path="res://assets/ui/town/characters/spectators2.png" id="29_tswh5"]
[ext_resource type="Script" uid="uid://1larypg8xegd" path="res://scenes/town/cheat_code.gd" id="30_8otme"]
[ext_resource type="Texture2D" uid="uid://0gt33ynkg4xa" path="res://assets/ui/town/characters/spectators3.png" id="30_t15ev"]
[ext_resource type="Texture2D" uid="uid://d3qlcq30erofe" path="res://assets/ui/town/characters/spectators4.png" id="31_5jhdi"]
[ext_resource type="AudioStream" uid="uid://bqonfsg3hyvef" path="res://assets/sfx/unlock2.mp3" id="31_086wm"]
[ext_resource type="Script" uid="uid://dx4uosn1nr4n7" path="res://scenes/game_scene/world/fade_rect.gd" id="32_086wm"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_8dq74"]
frames = 12
speed_scale = 2.0
frame_0/texture = ExtResource("12_gdn34")
frame_0/duration = 0.5
frame_1/texture = ExtResource("16_qet4j")
frame_1/duration = 0.5
frame_2/texture = ExtResource("17_587hs")
frame_2/duration = 0.5
frame_3/texture = ExtResource("18_prosl")
frame_3/duration = 0.5
frame_4/texture = ExtResource("19_8otme")
frame_4/duration = 0.5
frame_5/texture = ExtResource("20_086wm")
frame_5/duration = 0.5
frame_6/texture = ExtResource("21_lteju")
frame_6/duration = 0.5
frame_7/texture = ExtResource("22_hyja2")
frame_7/duration = 0.5
frame_8/texture = ExtResource("23_ipcul")
frame_8/duration = 0.5
frame_9/texture = ExtResource("13_8dq74")
frame_9/duration = 0.5
frame_10/texture = ExtResource("14_v6jhq")
frame_10/duration = 0.5
frame_11/texture = ExtResource("14_v6jhq")
frame_11/duration = 0.5

[sub_resource type="AnimatedTexture" id="AnimatedTexture_gdn34"]
frames = 12
speed_scale = 2.0
frame_0/texture = ExtResource("12_gdn34")
frame_0/duration = 0.5
frame_1/texture = ExtResource("16_qet4j")
frame_1/duration = 0.5
frame_2/texture = ExtResource("17_587hs")
frame_2/duration = 0.5
frame_3/texture = ExtResource("18_prosl")
frame_3/duration = 0.5
frame_4/texture = ExtResource("19_8otme")
frame_4/duration = 0.5
frame_5/texture = ExtResource("20_086wm")
frame_5/duration = 0.5
frame_6/texture = ExtResource("21_lteju")
frame_6/duration = 0.5
frame_7/texture = ExtResource("22_hyja2")
frame_7/duration = 0.5
frame_8/texture = ExtResource("23_ipcul")
frame_8/duration = 0.5
frame_9/texture = ExtResource("13_8dq74")
frame_9/duration = 0.5
frame_10/texture = ExtResource("14_v6jhq")
frame_10/duration = 0.5
frame_11/texture = ExtResource("14_v6jhq")
frame_11/duration = 0.5

[sub_resource type="AnimatedTexture" id="AnimatedTexture_8otme"]
frames = 12
speed_scale = 2.0
frame_0/texture = ExtResource("12_gdn34")
frame_0/duration = 0.5
frame_1/texture = ExtResource("16_qet4j")
frame_1/duration = 0.5
frame_2/texture = ExtResource("17_587hs")
frame_2/duration = 0.5
frame_3/texture = ExtResource("18_prosl")
frame_3/duration = 0.5
frame_4/texture = ExtResource("19_8otme")
frame_4/duration = 0.5
frame_5/texture = ExtResource("20_086wm")
frame_5/duration = 0.5
frame_6/texture = ExtResource("21_lteju")
frame_6/duration = 0.5
frame_7/texture = ExtResource("22_hyja2")
frame_7/duration = 0.5
frame_8/texture = ExtResource("23_ipcul")
frame_8/duration = 0.5
frame_9/texture = ExtResource("13_8dq74")
frame_9/duration = 0.5
frame_10/texture = ExtResource("14_v6jhq")
frame_10/duration = 0.5
frame_11/texture = ExtResource("14_v6jhq")
frame_11/duration = 0.5

[sub_resource type="AnimatedTexture" id="AnimatedTexture_wui2e"]
frames = 12
speed_scale = 2.0
frame_0/texture = ExtResource("12_gdn34")
frame_0/duration = 0.5
frame_1/texture = ExtResource("16_qet4j")
frame_1/duration = 0.5
frame_2/texture = ExtResource("17_587hs")
frame_2/duration = 0.5
frame_3/texture = ExtResource("18_prosl")
frame_3/duration = 0.5
frame_4/texture = ExtResource("19_8otme")
frame_4/duration = 0.5
frame_5/texture = ExtResource("20_086wm")
frame_5/duration = 0.5
frame_6/texture = ExtResource("21_lteju")
frame_6/duration = 0.5
frame_7/texture = ExtResource("22_hyja2")
frame_7/duration = 0.5
frame_8/texture = ExtResource("23_ipcul")
frame_8/duration = 0.5
frame_9/texture = ExtResource("13_8dq74")
frame_9/duration = 0.5
frame_10/texture = ExtResource("14_v6jhq")
frame_10/duration = 0.5
frame_11/texture = ExtResource("14_v6jhq")
frame_11/duration = 0.5

[sub_resource type="AnimatedTexture" id="AnimatedTexture_15fyj"]
frames = 4
frame_0/texture = ExtResource("28_6k88b")
frame_1/texture = ExtResource("29_tswh5")
frame_1/duration = 1.0
frame_2/texture = ExtResource("30_t15ev")
frame_2/duration = 1.0
frame_3/texture = ExtResource("31_5jhdi")
frame_3/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_4cewy"]
frames = 4
frame_0/texture = ExtResource("24_086wm")
frame_1/texture = ExtResource("25_lteju")
frame_1/duration = 1.0
frame_2/texture = ExtResource("26_hyja2")
frame_2/duration = 1.0
frame_3/texture = ExtResource("27_ipcul")
frame_3/duration = 1.0

[node name="Town" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_587hs")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundArt" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ki453")
metadata/_edit_use_anchors_ = true

[node name="Waves" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 32.0
offset_right = 72.0
offset_bottom = 40.0

[node name="Wave1" type="TextureRect" parent="CanvasLayer/Waves"]
layout_mode = 0
offset_top = 680.0
offset_right = 64.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_8dq74")

[node name="Wave2" type="TextureRect" parent="CanvasLayer/Waves"]
layout_mode = 0
offset_left = 200.0
offset_top = 680.0
offset_right = 264.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_gdn34")

[node name="Wave3" type="TextureRect" parent="CanvasLayer/Waves"]
layout_mode = 0
offset_left = 400.0
offset_top = 680.0
offset_right = 464.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_8otme")

[node name="Wave4" type="TextureRect" parent="CanvasLayer/Waves"]
layout_mode = 0
offset_left = 600.0
offset_top = 680.0
offset_right = 664.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_8dq74")

[node name="Wave5" type="TextureRect" parent="CanvasLayer/Waves"]
layout_mode = 0
offset_left = 800.0
offset_top = 680.0
offset_right = 864.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_gdn34")

[node name="Wave6" type="TextureRect" parent="CanvasLayer/Waves"]
layout_mode = 0
offset_left = 1000.0
offset_top = 680.0
offset_right = 1064.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_8otme")

[node name="Waves2" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 284.0
offset_top = -45.0
offset_right = 324.0
offset_bottom = -5.0

[node name="Wave1" type="TextureRect" parent="CanvasLayer/Waves2"]
layout_mode = 0
offset_top = 680.0
offset_right = 64.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_8dq74")

[node name="Wave2" type="TextureRect" parent="CanvasLayer/Waves2"]
layout_mode = 0
offset_left = 200.0
offset_top = 680.0
offset_right = 264.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_gdn34")

[node name="Wave3" type="TextureRect" parent="CanvasLayer/Waves2"]
layout_mode = 0
offset_left = 400.0
offset_top = 680.0
offset_right = 464.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_8otme")

[node name="Wave4" type="TextureRect" parent="CanvasLayer/Waves2"]
layout_mode = 0
offset_left = 407.0
offset_top = 680.0
offset_right = 471.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_wui2e")

[node name="Wave5" type="TextureRect" parent="CanvasLayer/Waves2"]
layout_mode = 0
offset_left = 600.0
offset_top = 680.0
offset_right = 664.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_wui2e")

[node name="Waves3" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 337.0
offset_top = -96.0
offset_right = 377.0
offset_bottom = -56.0

[node name="Wave1" type="TextureRect" parent="CanvasLayer/Waves3"]
layout_mode = 0
offset_top = 680.0
offset_right = 64.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_8dq74")

[node name="Wave2" type="TextureRect" parent="CanvasLayer/Waves3"]
layout_mode = 0
offset_left = 200.0
offset_top = 680.0
offset_right = 264.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_gdn34")

[node name="Wave3" type="TextureRect" parent="CanvasLayer/Waves3"]
layout_mode = 0
offset_left = 400.0
offset_top = 680.0
offset_right = 464.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_8otme")

[node name="Wave4" type="TextureRect" parent="CanvasLayer/Waves3"]
layout_mode = 0
offset_left = 407.0
offset_top = 680.0
offset_right = 471.0
offset_bottom = 712.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = SubResource("AnimatedTexture_wui2e")

[node name="TavernClickZone" type="ColorRect" parent="CanvasLayer"]
offset_right = 218.0
offset_bottom = 409.0
tooltip_text = "Enter the tavern"
color = Color(1, 1, 1, 0)
script = ExtResource("3_uiijs")

[node name="TavernGlow" type="TextureRect" parent="CanvasLayer/TavernClickZone"]
visible = false
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
texture = ExtResource("3_qvgpt")

[node name="TradeClickZone" type="ColorRect" parent="CanvasLayer"]
offset_left = 333.0
offset_top = 165.0
offset_right = 487.0
offset_bottom = 317.0
tooltip_text = "Enter the market"
color = Color(1, 1, 1, 0)
script = ExtResource("5_n5615")

[node name="TradeGlow" type="TextureRect" parent="CanvasLayer/TradeClickZone"]
visible = false
layout_mode = 0
offset_left = -333.0
offset_top = -165.0
offset_right = 947.0
offset_bottom = 555.0
mouse_filter = 2
texture = ExtResource("4_25glc")

[node name="QuestClickZone" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_left = 667.0
offset_top = 207.0
offset_right = 880.0
offset_bottom = 427.0
tooltip_text = "Look at quests"
color = Color(1, 1, 1, 0)

[node name="ShipyardClickZone" type="ColorRect" parent="CanvasLayer"]
offset_left = 894.0
offset_top = -39.0
offset_right = 1280.0
offset_bottom = 232.0
tooltip_text = "Enter the shipyard"
color = Color(1, 1, 1, 0)
script = ExtResource("7_lersf")

[node name="ShipyardGlow" type="TextureRect" parent="CanvasLayer/ShipyardClickZone"]
visible = false
layout_mode = 0
offset_left = -894.0
offset_top = 39.0
offset_right = 386.0
offset_bottom = 759.0
mouse_filter = 2
texture = ExtResource("7_8mv33")

[node name="Spectators" type="TextureRect" parent="CanvasLayer"]
offset_left = 1016.00006
offset_top = 173.0
offset_right = 2296.0
offset_bottom = 893.0
scale = Vector2(3, 3)
texture = SubResource("AnimatedTexture_15fyj")

[node name="Sleepy" type="TextureRect" parent="CanvasLayer"]
offset_left = -21.0
offset_top = 305.0
offset_right = 1259.0
offset_bottom = 1025.0
scale = Vector2(3.48, 3.48)
texture = SubResource("AnimatedTexture_4cewy")

[node name="LeaveClickZone" type="ColorRect" parent="CanvasLayer"]
offset_top = 462.0
offset_right = 1281.0
offset_bottom = 718.0
tooltip_text = "Set sail"
color = Color(1, 1, 1, 0)
script = ExtResource("7_tr5gk")

[node name="LeaveGlow" type="TextureRect" parent="CanvasLayer/LeaveClickZone"]
visible = false
layout_mode = 0
offset_top = -462.0
offset_right = 1280.0
offset_bottom = 258.0
mouse_filter = 2
texture = ExtResource("10_v3pdc")

[node name="CheatCode" type="ColorRect" parent="CanvasLayer"]
offset_left = 630.0
offset_top = 176.0
offset_right = 670.0
offset_bottom = 260.0
color = Color(1, 1, 1, 0)
script = ExtResource("30_8otme")

[node name="CheatCode" type="AudioStreamPlayer" parent="CanvasLayer/CheatCode"]
stream = ExtResource("31_086wm")

[node name="FadeRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)
script = ExtResource("32_086wm")

[connection signal="gui_input" from="CanvasLayer/TavernClickZone" to="CanvasLayer/TavernClickZone" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/TavernClickZone" to="CanvasLayer/TavernClickZone" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/TavernClickZone" to="CanvasLayer/TavernClickZone" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/TradeClickZone" to="CanvasLayer/TradeClickZone" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/TradeClickZone" to="CanvasLayer/TradeClickZone" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/TradeClickZone" to="CanvasLayer/TradeClickZone" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/ShipyardClickZone" to="CanvasLayer/ShipyardClickZone" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/ShipyardClickZone" to="CanvasLayer/ShipyardClickZone" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ShipyardClickZone" to="CanvasLayer/ShipyardClickZone" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/LeaveClickZone" to="CanvasLayer/LeaveClickZone" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/LeaveClickZone" to="CanvasLayer/LeaveClickZone" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/LeaveClickZone" to="CanvasLayer/LeaveClickZone" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/CheatCode" to="CanvasLayer/CheatCode" method="_on_gui_input"]
